--- a/SlabProjectAPI/appsettings.json
+++ b/SlabProjectAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=project.db;Cache=Shared"
   },
   "JwtConfig": {
     "Secret": "dgywoqbmazpzxnzaukabpbyznaahnsxa"
