API documentation Updated Roles foreach endpoint

--- a/SlabProjectAPI/SlabProjectAPI.csproj
+++ b/SlabProjectAPI/SlabProjectAPI.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\admin\source\repos\SlabProjectAPI\SlabProjectAPI\SlabProjectAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" NoWarn="NU1605" />
