Emailer, conventioning, fix issue with auth roles

--- a/SlabProjectAPI/appsettings.json
+++ b/SlabProjectAPI/appsettings.json
@@ -5,6 +5,13 @@
   "JwtConfig": {
     "Secret": "dgywoqbmazpzxnzaukabpbyznaahnsxa"
   },
+  "MailSettings": {
+    "Mail": "juanslabtestmail@gmail.com",
+    "DisplayName": "Juan Slabmail",
+    "Password": "Pa$$word1234",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
