--- a/SlabProjectAPI/SlabProjectAPI.csproj
+++ b/SlabProjectAPI/SlabProjectAPI.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\admin\source\repos\SlabProjectAPI\SlabProjectAPI\SlabProjectAPI.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\PSF 20\Source\Repos\SlabProjectAPI\SlabProjectAPI\SlabProjectAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
